# Django-test

./: .gitignore  pyproject.toml
books_project/books/: views.py
books_project/books_app/: admin.py  apps.py  models.py  views.py
books_project/books_app/migrations/: 0001_initial.py  0002_alter_book_pub_date.py
books_project/books_app/static/css/: styles.css
books_project/books_app/templates/books_app/: about.html  base.html  contacts.html  index.html  products.html  top.html
books_project/books_project/: asgi.py  settings.py  urls.py  wsgi.py
